--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Ban all",
     "description": "help you to ban the all memebers from the group",
-    "repository": "https://github.com/Devarora2604/Banall",
+    "repository": "https://github.com/Vishal-1756/MAA-CHUDA-FIR",
     "image": "heroku/python",
     "env": {
         "TELEGRAM_TOKEN": {
